Jeu_de_tests/error/reade.tpc
int main(void){
    int *i;
    reade(i);
    return 1;
}
